# EpochFolio

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compile_commands.json  vcpkg.json
client/: README.md  package-lock.json  package.json  tsconfig.json
client/public/: sample_tearsheet.json
client/src/: App.tsx  index.tsx
client/src/components/: Dashboard.tsx  FileUpload.tsx
client/src/components/widgets/: CardRenderer.tsx  ChartRenderer.tsx  DataTableWidget.tsx  TableRenderer.tsx
client/src/components/widgets/chartOptions/: areaChartOptions.ts  axis-utils.ts  barChartOptions.ts  boxPlotOptions.ts  heatMapOptions.ts  histogramChartOptions.ts  index.ts  lineChartOptions.ts  pieChartOptions.ts  xRangeOptions.ts
client/src/types/: index.ts
client/src/utils/: colorPalettes.ts  formatting.ts
cmake/: EpochFlow.cmake  EpochMetadata.cmake  EpochScript.cmake
include/epoch_folio/: aliases.h  empyrical_all.h  init_reports.h  ireport.h  metadata.h  tearsheet.h
src/: CMakeLists.txt  metadata.cpp  tearsheet.cpp
src/common/: CMakeLists.txt  card_helpers.cpp  card_helpers.h  chart_def.cpp  chart_def.h  table_def.h  table_helpers.cpp  table_helpers.h  type_helper.h
src/models/: CMakeLists.txt  chart_def.cpp  chart_def.h  table_def.h
src/portfolio/: CMakeLists.txt  interesting_periods.h  model.cpp  model.h  pos.cpp  pos.h  round_trip.cpp  round_trip.h  timeseries.cpp  timeseries.h  txn.cpp  txn.h
src/reports/: CMakeLists.txt  gap_report.cpp  gap_report.h  init_reports.cpp  ireport.h  registry.cpp
src/tear_sheets/: CMakeLists.txt
src/tear_sheets/positions/: CMakeLists.txt  tearsheet.cpp  tearsheet.h
src/tear_sheets/returns/: CMakeLists.txt  tearsheet.cpp  tearsheet.h
src/tear_sheets/round_trip/: tearsheet.cpp  tearsheet.h
src/tear_sheets/transactions/: tearsheet.cpp  tearsheet.h
test/: CMakeLists.txt  catch_main.cpp  common_utils.h  tearsheet_test.cpp
test/empyrical/: CMakeLists.txt  empyrical_test.cpp  test_utils.h
test/portfolio/: CMakeLists.txt  pos_test.cpp  time_series_test.cpp  txn_test.cpp
test/python_benchmark_test/: EpochFolio.code-workspace  README.md  example_benchmark_usage.py  example_usage.py  requirements.txt  run_benchmark.py  run_tests.py  test_detailed_comparison.py  test_pyfolio_benchmark.py  test_real_data_comparison.py
test/reports/: CMakeLists.txt  gap_report_test.cpp  report_test_all.cpp
test/reports/report_test_cases/: basic_gap_analysis.yaml  comprehensive_tearsheet.yaml  edge_cases.yaml  fill_behavior_analysis.yaml  gap_intraday_test.yaml  intraday_gap_patterns.yaml  options_configuration.yaml  realistic_opening_gaps.yaml  size_distribution_analysis.yaml  time_distribution_analysis.yaml
test/testing/: CMakeLists.txt  tearsheet_tester.cpp  tearsheet_tester.hpp
test_output/: full_test_result.pb  positions_test_result.pb  returns_distribution_test_result.pb  risk_analysis_test_result.pb  round_trip_test_result.pb  strategy_benchmark_test_result.pb  transactions_test_result.pb
test_output_no_benchmark/: full_test_result.pb
